# cpp-seminars-2022

./: main.cpp  vector.cpp  vector.hpp
interpreter/: CMakeLists.txt  command.cpp  command.hpp  data_it.hpp  interpreter.hpp  interpreter_error.hpp  main.cpp  sum.cpp
smart_ptr/: CMakeLists.txt  main.cpp  smart_ptr.hpp
vector/: CMakeLists.txt  vector.cpp  vector.hpp  vector_test.cpp
